--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
                     <h1 class="mb-0">
-                        Clarence
-                        <span class="text-primary">Taylor</span>
+                        許詠晴
+                        <span class="text-primary">Winnie</span>
                     </h1>
                     <div class="subheading mb-5">
-                        3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
-                        <a href="mailto:name@email.com">name@email.com</a>
+                        新北市深坑區深南路21號 · (03) 123-8468 ·
+                        <a href="mailto:name@email.com">yungching0324@email.com</a>
                     </div>
-                    <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+                    <p class="lead mb-5">我對於資料科學和資訊視覺化相當有興趣，喜歡研究R語言和python等程式設計以及政府開放資料的應用。此外我對網站規劃與網頁設計也有興趣並希望能學習到相關技能。</p>
                     <div class="social-icons">
                         <a class="social-icon" href="#"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="#"><i class="fab fa-github"></i></a>
