--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
+		<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300&display=swap" rel="stylesheet">
     </head>
     <body id="page-top">
         <!-- Navigation-->
@@ -41,7 +43,7 @@
                 <div class="resume-section-content">
                     <h1 class="mb-0">
                         許詠晴
-                        <span class="text-primary">Winnie</span>
+                        <span class="text-primary">Hsu Yung Qing</span>
                     </h1>
                     <div class="subheading mb-5">
                         新北市深坑區深南路21號 · (03) 123-8468 ·
