--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
                     <h1 class="mb-0">
-                        許詠晴
+                        許詠晴<br>
                         <span class="text-primary">Hsu Yung Qing</span>
                     </h1>
                     <div class="subheading mb-5">
