--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
                 <span class="d-block d-lg-none">Clarence Taylor</span>
-                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="" /></span>
+                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="profile.jpg" /></span>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -53,7 +53,8 @@
                     <p class="lead mb-5">所謂政治，並不是只追求個人的私益，而是以更宏觀的視野看世界、以更全面的角度照顧人民。</p>
 <p>直率敢言、富有正義感是我的個人特質，也在許多活動中培養了與人交流的能力。</p>
 <p>將來的目標是進入國會成為一名國會議員為民服務，並以能幫助更多沒被社會看見的弱勢群眾為目標。</p>
-					<p class="lead mb-5">未來希望能藉此參與政策的制定，替人民發聲並希望能制定更完善的措施來造福更多人民，促進社會安定與和諧。</p>
+<p>未來希望能藉此參與政策的制定，替人民發聲並希望能制定更完善的措施來造福更多人民，促進社會安定與和諧。</p>
+					<p class="lead mb-5">
                     <div class="social-icons">
                         <a class="social-icon" href="#"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="#"><i class="fab fa-github"></i></a>
