--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
                         新北市深坑區深南路21號 · (03) 123-8468 ·
                         <a href="mailto:name@email.com">yungching0324@email.com</a>
                     </div>
-                    <p class="lead mb-5">所謂政治，並不是只追求個人的私益，而是以更宏觀的視野看世界、以更全面的角度照顧人民。</p>
-<p>直率敢言、富有正義感是我的個人特質，也在許多活動中培養了與人交流的能力。</p>
-<p>將來的目標是進入國會成為一名國會議員為民服務，並以能幫助更多沒被社會看見的弱勢群眾為目標。</p>
-<p>未來希望能藉此參與政策的制定，替人民發聲並希望能制定更完善的措施來造福更多人民，促進社會安定與和諧。</p>
+                    <p class="lead mb-5">所謂政治，並不是只追求個人的私益，而是以更宏觀的視野看世界、以更全面的角度照顧人民。<br>
+直率敢言、富有正義感是我的個人特質，也在許多活動中培養了與人交流的能力。<br>
+將來的目標是進入國會成為一名國會議員為民服務，並以能幫助更多沒被社會看見的弱勢群眾為目標。<br>
+未來希望能藉此參與政策的制定，替人民發聲並希望能制定更完善的措施來造福更多人民，促進社會安定與和諧。<br>
 					<p class="lead mb-5">
                     <div class="social-icons">
                         <a class="social-icon" href="#"><i class="fab fa-linkedin-in"></i></a>
