--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
+					<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Friends">Friends</a></li>
                 </ul>
             </div>
         </nav>
@@ -57,9 +58,10 @@
 					<p class="lead mb-5">
                     <div class="social-icons">
                         <a class="social-icon" href="#"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="#"><i class="fab fa-github"></i></a>
-                        <a class="social-icon" href="#"><i class="fab fa-twitter"></i></a>
-                        <a class="social-icon" href="#"><i class="fab fa-facebook-f"></i></a>
+                        <a class="social-icon" href="https://github.com/booyu324/booyu324.github.io"><i class="fab fa-github"></i></a>
+                        <a class="social-icon" href="https://twitter.com/324ching"><i class="fab fa-twitter"></i></a>
+                        <a class="social-icon" href="https://www.facebook.com/yungching.hsu.16"><i class="fab fa-facebook-f"></i></a>
+						<a class="social-icon" href="https://www.instagram.com/324_ching/"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
             </section>
@@ -133,18 +135,11 @@
                     <h2 class="mb-5">Skills</h2>
                     <div class="subheading mb-3">Programming Languages & Tools</div>
                     <ul class="list-inline dev-icons">
-                        <li class="list-inline-item"><i class="fab fa-html5"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
+                        <li class="list-inline-item"><i class="fas fa-biohazard"></i></li>
+                        <li class="list-inline-item"><i class="fas fa-file-word"></i></li>
+                        <li class="list-inline-item"><i class="fas fa-file-powerpoint"></i></li>
                         <li class="list-inline-item"><i class="fab fa-angular"></i></li>
                         <li class="list-inline-item"><i class="fab fa-react"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-node-js"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-sass"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-less"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-wordpress"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-gulp"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-grunt"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-npm"></i></li>
                     </ul>
                     <div class="subheading mb-3">Workflow</div>
                     <ul class="fa-ul mb-0">
@@ -174,7 +169,12 @@
                     <h2 class="mb-5">Interests</h2>
                     <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
                     <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
-                </div>
+				    <ul class="list-inline dev-icons">
+                        <li class="list-inline-item"><i class="fas fa-basketball-ball"></i></li>
+                        <li class="list-inline-item"><i class="fas fa-hiking"></i></li>
+                        <li class="list-inline-item"><i class="fas fa-swimmer"></i></li>
+                    </ul>
+				</div>
             </section>
             <hr class="m-0" />
             <!-- Awards-->
@@ -223,6 +223,18 @@
                     </ul>
                 </div>
             </section>
+			
+			<hr class="m-0" />
+            <!-- Interests-->
+            <section class="resume-section" id="Friends">
+                <div class="resume-section-content">
+				    <h2 class="mb-5">Friends</h2>
+					<ul class="fa-ul mb-0">
+					    <li><a href="http://chan031777.github.io/">詹亞軒</a></li>
+					</ul>
+				</div>
+			</section>
+			
         </div>
         <!-- Bootstrap core JS-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
