--- a/index.html
+++ b/index.html
@@ -231,6 +231,7 @@
 				    <h2 class="mb-5">Friends</h2>
 					<ul class="fa-ul mb-0">
 					    <li><a href="http://chan031777.github.io/">詹亞軒</a></li>
+						<li><a href="http://baokakaaaaa.github.io/">陳毓婷</a></li>
 					</ul>
 				</div>
 			</section>
