--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 直率敢言、富有正義感是我的個人特質，也在許多活動中培養了與人交流的能力。<br>
 將來的目標是進入國會成為一名國會議員為民服務，並以能幫助更多沒被社會看見的弱勢群眾為目標。<br>
 未來希望能藉此參與政策的制定，替人民發聲並希望能制定更完善的措施來造福更多人民，促進社會安定與和諧。<br>
+<p>I have a sense of justice so I  always stand up for those who face  injustice and do not know how to resolve it  in our society. For example, when I heard my friends or my classmates suffered from injustice by school, I will collect every evidence and cooperate with some teachers in order to increase my persuasiveness. Then, go to stand up for our right!  Accordingly, I want to become a lawyer to use wise means to come to their aid.</p>
 					<p class="lead mb-5">
                     <div class="social-icons">
                         <a class="social-icon" href="#"><i class="fab fa-linkedin-in"></i></a>
@@ -167,8 +168,8 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-                    <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+                    <p> am interesting in reading books about laws and political science including Six codes, Constitution, Civil Code, Code of  procedures, Criminal Code, Code of Criminal Procedure and Administrative laws, and so on. </p>
+                    <p class="mb-0">Besides this static activities, I love to play basketball and dance, also running is one of my favorite of sports.</p>
 				    <ul class="list-inline dev-icons">
                         <li class="list-inline-item"><i class="fas fa-basketball-ball"></i></li>
                         <li class="list-inline-item"><i class="fas fa-hiking"></i></li>
@@ -183,11 +184,11 @@
                     <h2 class="mb-5">Awards & Certifications</h2>
                     <ul class="fa-ul mb-0">
                         <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            <span class="fa-li"><i class="fas fa-medal"></i></span>
                             Google Analytics Certified Developer
                         </li>
                         <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            <span class="fa-li"><i class="fas fa-medal"></i></span>
                             Mobile Web Specialist - Google Certification
                         </li>
                         <li>
