--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
+					<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#specialties">Specialties</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
@@ -73,35 +74,27 @@
                     <h2 class="mb-5">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Senior Web Developer</h3>
-                            <div class="subheading mb-3">Intelitec Solutions</div>
-                            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+                            <h3 class="mb-0">世界展望會公益營隊負責人</h3>
+                            <div class="subheading mb-3">世界展望會World Vision International</div>
+                            <p>這場公益活動的受益對象是世界展望會桃園中心，在這場營隊中，我們協助一些在讀書方面遇到挫折的孩子，透過遊戲教予他們讀書的方法，培養他們的自信以及建立對學習的熱忱。內容包括透過全手繪英語繪本培養其英語能力，並搭配遊戲培養學習力，分別為幾何能力、規劃能力、還有問題及聯想能力，加上最後的以表演方式將所學的學以致用，增進彼此的互動及合作，重拾學習的自信。</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">March 2013 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">January 2017 - June 2017</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Web Developer</h3>
-                            <div class="subheading mb-3">Intelitec Solutions</div>
-                            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+                            <h3 class="mb-0">合作出版《啟動青春列車》</h3>
+                            <div class="subheading mb-3">桃園市立壽山高級中等學校Taoyuan Municipal Shou Shan Senior High School</div>
+                            <p>從高二開始，經歷了無數次的校閱、無數次的討論， 到了現在拿到成品，回想過去毫無經驗的我們，毅然決然的投入出書的計畫，在每個寒暑假裡，學校內總是有我們的身影，我們在創作、在討論、在學習。現在手上靜靜地捧著這本書，內心卻是非常的慷慨激昂，因為這是壽山高中創校七年以來第一本由語文專長班所撰寫出版的書，那可是無比的榮耀及感動。</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">December 2011 - March 2013</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Novembor 2017 - June 2018</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Junior Web Designer</h3>
-                            <div class="subheading mb-3">Shout! Media Productions</div>
-                            <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
+                            <h3 class="mb-0">模擬聯合國策劃人</h3>
+                            <div class="subheading mb-3">Model United Nations</div>
+                            <p>在模擬聯合國活動中，學生們假設自己是不同國家的代表，對於問題進行研究，並根據自己代表國家的切實利益制定談判立場；由於代表國家不同，學生必須先行了解代表國的立場與處境，跳脫主觀意識的盲點，以不同角度看待問題。此外，基於各自被指定參加的委員會，學生代表可以致力於制定全球環境政策，或是向聯合國安理會提出有關經濟制裁的建議。</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">July 2010 - December 2011</span></div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Web Design Intern</h3>
-                            <div class="subheading mb-3">Shout! Media Productions</div>
-                            <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">September 2008 - June 2010</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">October 2018 - December 2018</span></div>
                     </div>
                 </div>
             </section>
@@ -112,20 +105,65 @@
                     <h2 class="mb-5">Education</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">University of Colorado Boulder</h3>
-                            <div class="subheading mb-3">Bachelor of Science</div>
-                            <div>Computer Science - Web Development Track</div>
-                            <p>GPA: 3.23</p>
+                            <h3 class="mb-0">桃園市立壽山高級中等學校 Taoyuan Municipal Shou Shan Senior High School</h3>
+                            <div class="subheading mb-3">gifted education program</div>
+                            <div>語文資優班</div>
+                            <p>						
+							   <ul>							   
+							   <li>班級排名：7/41</li>
+							   <li>年級排名：18/115</li> 
+							   <li>全校排名：39/402</li> 							    
+							   </ul>
+							</p>						
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2006 - May 2010</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">August 2015 - June 2018</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">James Buchanan High School</h3>
-                            <div class="subheading mb-3">Technology Magnet Program</div>
+                            <h3 class="mb-0">東吳大學 Soochow University</h3>
+                            <div class="subheading mb-3">政治系Department of Political Science</div>
                             <p>GPA: 3.56</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2002 - May 2006</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">August 2018 - March 2020</span></div>
+                    </div>
+					<div class="d-flex flex-column flex-md-row justify-content-between">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">世新大學 Shih Hsin University</h3>
+                            <div class="subheading mb-3">資訊傳播系Department of Information and Communications</div>
+                            <p>GPA: 3.56</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">August 2018 - March 2020</span></div>
+                    </div>
+                </div>
+            </section>
+            <hr class="m-0" />            
+			<!-- Specialties-->
+            <section class="resume-section" id="specialties">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Specialties</h2>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">世界展望會公益營隊負責人</h3>
+                            <div class="subheading mb-3">世界展望會World Vision International</div>
+                            <p>這場公益活動的受益對象是世界展望會桃園中心，在這場營隊中，我們協助一些在讀書方面遇到挫折的孩子，透過遊戲教予他們讀書的方法，培養他們的自信以及建立對學習的熱忱。內容包括透過全手繪英語繪本培養其英語能力，並搭配遊戲培養學習力，分別為幾何能力、規劃能力、還有問題及聯想能力，加上最後的以表演方式將所學的學以致用，增進彼此的互動及合作，重拾學習的自信。</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">January 2017 - June 2017</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">合作出版《啟動青春列車》</h3>
+                            <div class="subheading mb-3">桃園市立壽山高級中等學校Taoyuan Municipal Shou Shan Senior High School</div>
+                            <p>從高二開始，經歷了無數次的校閱、無數次的討論， 到了現在拿到成品，回想過去毫無經驗的我們，毅然決然的投入出書的計畫，在每個寒暑假裡，學校內總是有我們的身影，我們在創作、在討論、在學習。現在手上靜靜地捧著這本書，內心卻是非常的慷慨激昂，因為這是壽山高中創校七年以來第一本由語文專長班所撰寫出版的書，那可是無比的榮耀及感動。</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">Novembor 2017 - June 2018</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">模擬聯合國策劃人</h3>
+                            <div class="subheading mb-3">Model United Nations</div>
+                            <p>在模擬聯合國活動中，學生們假設自己是不同國家的代表，對於問題進行研究，並根據自己代表國家的切實利益制定談判立場；由於代表國家不同，學生必須先行了解代表國的立場與處境，跳脫主觀意識的盲點，以不同角度看待問題。此外，基於各自被指定參加的委員會，學生代表可以致力於制定全球環境政策，或是向聯合國安理會提出有關經濟制裁的建議。</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">October 2018 - December 2018</span></div>
                     </div>
                 </div>
             </section>
@@ -168,8 +206,8 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p> am interesting in reading books about laws and political science including Six codes, Constitution, Civil Code, Code of  procedures, Criminal Code, Code of Criminal Procedure and Administrative laws, and so on. </p>
-                    <p class="mb-0">Besides this static activities, I love to play basketball and dance, also running is one of my favorite of sports.</p>
+                    <p> am interesting in reading books about laws and political science including Six codes, Constitution, Civil Code, Code of  procedures, Criminal Code, Code of Criminal Procedure and Administrative laws, and so on.
+                    Besides this static activities, I love to play basketball and dance, also running is one of my favorite of sports.</p>
 				    <ul class="list-inline dev-icons">
                         <li class="list-inline-item"><i class="fas fa-basketball-ball"></i></li>
                         <li class="list-inline-item"><i class="fas fa-hiking"></i></li>
