--- a/index.html
+++ b/index.html
@@ -143,11 +143,18 @@
                     <h2 class="mb-5">Specialties</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">世界展望會公益營隊負責人</h3>
-                            <div class="subheading mb-3">世界展望會World Vision International</div>
-                            <p>這場公益活動的受益對象是世界展望會桃園中心，在這場營隊中，我們協助一些在讀書方面遇到挫折的孩子，透過遊戲教予他們讀書的方法，培養他們的自信以及建立對學習的熱忱。內容包括透過全手繪英語繪本培養其英語能力，並搭配遊戲培養學習力，分別為幾何能力、規劃能力、還有問題及聯想能力，加上最後的以表演方式將所學的學以致用，增進彼此的互動及合作，重拾學習的自信。</p>
+                            <h3 class="mb-0">專業科目領域</h3>
+                            <p>
+							   <ul>
+							   <li>政治學 </li>
+							   <li>社會學 </li>
+							   <li>經濟學 </li>
+							   </ul>
+							</p>  
+							  
+							
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">January 2017 - June 2017</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary"></span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
