--- a/index.html
+++ b/index.html
@@ -122,7 +122,12 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">東吳大學 Soochow University</h3>
                             <div class="subheading mb-3">政治系Department of Political Science</div>
-                            <p>GPA: 3.56</p>
+                            <p>
+							   <ul>
+							     <li>GPA: 3.56
+							     </li>
+							   </ul>							  
+							</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">August 2018 - March 2020</span></div>
                     </div>
@@ -130,7 +135,13 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">世新大學 Shih Hsin University</h3>
                             <div class="subheading mb-3">資訊傳播系Department of Information and Communications</div>
-                            <p>GPA: 3.56</p>
+                            <p>
+							 <ul>							   
+							   <li>班級排名：7/61</li>
+							   <li>組排名：7/61</li> 
+							   <li>操行成績：甲</li> 							    
+							   </ul>
+							</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">August 2018 - March 2020</span></div>
                     </div>
@@ -150,29 +161,11 @@
 							   <li>社會學 </li>
 							   <li>經濟學 </li>
 							   </ul>
-							</p>  
-							  
+							</p>		  
 							
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary"></span></div>
                     </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">合作出版《啟動青春列車》</h3>
-                            <div class="subheading mb-3">桃園市立壽山高級中等學校Taoyuan Municipal Shou Shan Senior High School</div>
-                            <p>從高二開始，經歷了無數次的校閱、無數次的討論， 到了現在拿到成品，回想過去毫無經驗的我們，毅然決然的投入出書的計畫，在每個寒暑假裡，學校內總是有我們的身影，我們在創作、在討論、在學習。現在手上靜靜地捧著這本書，內心卻是非常的慷慨激昂，因為這是壽山高中創校七年以來第一本由語文專長班所撰寫出版的書，那可是無比的榮耀及感動。</p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">Novembor 2017 - June 2018</span></div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">模擬聯合國策劃人</h3>
-                            <div class="subheading mb-3">Model United Nations</div>
-                            <p>在模擬聯合國活動中，學生們假設自己是不同國家的代表，對於問題進行研究，並根據自己代表國家的切實利益制定談判立場；由於代表國家不同，學生必須先行了解代表國的立場與處境，跳脫主觀意識的盲點，以不同角度看待問題。此外，基於各自被指定參加的委員會，學生代表可以致力於制定全球環境政策，或是向聯合國安理會提出有關經濟制裁的建議。</p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">October 2018 - December 2018</span></div>
-                    </div>
-                </div>
             </section>
             <hr class="m-0" />
             <!-- Skills-->
