--- a/index.html
+++ b/index.html
@@ -122,11 +122,8 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">東吳大學 Soochow University</h3>
                             <div class="subheading mb-3">政治系Department of Political Science</div>
-                            <p>
-							   <ul>
-							     <li>GPA: 3.56
-							     </li>
-							   </ul>							  
+                            <p>							   
+							  GPA: 3.56							     							  
 							</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">August 2018 - March 2020</span></div>
@@ -157,9 +154,9 @@
                             <h3 class="mb-0">專業科目領域</h3>
                             <p>
 							   <ul>
-							   <li>政治學 </li>
-							   <li>社會學 </li>
-							   <li>經濟學 </li>
+							   <li>政治學<i class="fas fa-landmark"></i></li>
+							   <li>社會學<i class="far fa-handshake"></i> </li>
+							   <li>經濟學<i class="fas fa-hand-holding-usd"></i> </li>
 							   </ul>
 							</p>		  
 							
@@ -197,8 +194,7 @@
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
                             Agile Development & Scrum
-                        </li>
-                    </ul>
+                        </li>                
                 </div>
             </section>
             <hr class="m-0" />
@@ -207,13 +203,45 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
                     <p> am interesting in reading books about laws and political science including Six codes, Constitution, Civil Code, Code of  procedures, Criminal Code, Code of Criminal Procedure and Administrative laws, and so on.
-                    Besides this static activities, I love to play basketball and dance, also running is one of my favorite of sports.</p>
+                    Besides this static activities, I love to play basketball and dance, also running is one of my favorite of sports.
+					And below is my favorite songs playlist want to share with you!</p>
+					<table class="table table-hover">
+                     <tr class="table-primary">
+					  <th>歌名</th>
+					  <th>歌手</th>
+					  <th>發行年</th>
+					  <th>語言</th>
+					  <th>收錄專輯</th>
+					 </tr>
+					 <tr>
+					  <td>House Party</td>
+					  <td>Super Junior</td>
+					  <td>2021</td>
+					  <td>韓文</td>
+					  <td>The Renaissance</td>
+					 </tr>
+					 <tr>
+					  <td>U MAD-야 우냐</td>
+					  <td>Bobby-바비</td>
+					  <td>2021</td>
+					  <td>韓文</td>
+					  <td>LUCKY MAN</td>
+					 </tr>
+					  <tr>
+					  <td>Why Why Why-왜왜왜</td>
+					  <td>iKON</td>
+					  <td>2021</td>
+					  <td>韓文</td>
+					  <td>Why Why Why-왜왜왜</td>
+					 </tr>
+					</table>
 				    <ul class="list-inline dev-icons">
                         <li class="list-inline-item"><i class="fas fa-basketball-ball"></i></li>
                         <li class="list-inline-item"><i class="fas fa-hiking"></i></li>
                         <li class="list-inline-item"><i class="fas fa-swimmer"></i></li>
+						<li class="list-inline-item"><i class="fas fa-music"></i></li>
                     </ul>
-				</div>
+				</div>				
             </section>
             <hr class="m-0" />
             <!-- Awards-->
