--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
 					<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#specialties">Specialties</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
+					<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#protfolio">Protfolio</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
 					<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Friends">Friends</a></li>
                 </ul>
             </div>
@@ -76,7 +76,12 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">世界展望會公益營隊負責人</h3>
                             <div class="subheading mb-3">世界展望會World Vision International</div>
-                            <p>這場公益活動的受益對象是世界展望會桃園中心，在這場營隊中，我們協助一些在讀書方面遇到挫折的孩子，透過遊戲教予他們讀書的方法，培養他們的自信以及建立對學習的熱忱。內容包括透過全手繪英語繪本培養其英語能力，並搭配遊戲培養學習力，分別為幾何能力、規劃能力、還有問題及聯想能力，加上最後的以表演方式將所學的學以致用，增進彼此的互動及合作，重拾學習的自信。</p>
+                            <p>這場公益活動的受益對象是世界展望會桃園中心，
+							在這場營隊中，我們協助一些在讀書方面遇到挫折的孩子，
+							透過遊戲教予他們讀書的方法，培養他們的自信以及建立對學習的熱忱。
+							內容包括透過全手繪英語繪本培養其英語能力，並搭配遊戲培養學習力，
+							分別為幾何能力、規劃能力、還有問題及聯想能力，
+							加上最後的以表演方式將所學的學以致用，增進彼此的互動及合作，重拾學習的自信。</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">January 2017 - June 2017</span></div>
                     </div>
@@ -84,7 +89,12 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">合作出版《啟動青春列車》</h3>
                             <div class="subheading mb-3">桃園市立壽山高級中等學校Taoyuan Municipal Shou Shan Senior High School</div>
-                            <p>從高二開始，經歷了無數次的校閱、無數次的討論， 到了現在拿到成品，回想過去毫無經驗的我們，毅然決然的投入出書的計畫，在每個寒暑假裡，學校內總是有我們的身影，我們在創作、在討論、在學習。現在手上靜靜地捧著這本書，內心卻是非常的慷慨激昂，因為這是壽山高中創校七年以來第一本由語文專長班所撰寫出版的書，那可是無比的榮耀及感動。</p>
+                            <p>從高二開始，經歷了無數次的校閱、無數次的討論， 
+							到了現在拿到成品，回想過去毫無經驗的我們，毅然決然的投入出書的計畫，
+							在每個寒暑假裡，學校內總是有我們的身影，我們在創作、在討論、在學習。
+							現在手上靜靜地捧著這本書，內心卻是非常的慷慨激昂，
+							因為這是壽山高中創校七年以來第一本由語文專長班所撰寫出版的書，
+							那可是無比的榮耀及感動。</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Novembor 2017 - June 2018</span></div>
                     </div>
@@ -122,7 +132,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">東吳大學 Soochow University</h3>
                             <div class="subheading mb-3">政治系Department of Political Science</div>
-                            <p>							   
+                            <p class="scu">							   
 							  GPA: 3.56							     							  
 							</p>
                         </div>
@@ -176,28 +186,66 @@
                         <li class="list-inline-item"><i class="fas fa-file-powerpoint"></i></li>
                         <li class="list-inline-item"><i class="fab fa-angular"></i></li>
                         <li class="list-inline-item"><i class="fab fa-react"></i></li>
-                    </ul>
-                    <div class="subheading mb-3">Workflow</div>
-                    <ul class="fa-ul mb-0">
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Mobile-First, Responsive Design
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Cross Browser Testing & Debugging
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Cross Functional Teams
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Agile Development & Scrum
-                        </li>                
-                </div>
+                    </ul>                    
             </section>
             <hr class="m-0" />
+			<!-- Protfolio-->
+            <section class="resume-section" id="protfolio">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Protfolio</h2>
+                    <p class="gaosuwoba">gao_su_wo_ba是我在Instagram創立並經營手寫文字的專頁，目前是以向大眾推薦台灣獨立樂團所創作的經典好歌為主，				    
+					將來則是希望透過匿名的方式收集來自不同階層、文化與生長環境的人們所傳遞的故事，
+					並用文字將故事更有溫度的呈現出來，不僅僅是希望故事的內容可以帶給人們不同省思，
+					更希望能夠透過手寫的溫度講溫暖傳遞出去。</p>
+					<table class="table table-hover">
+                     <tr class="table-primary">
+					  <th>作品名稱</th>
+					  <th>作品呈現</th>
+					  <th>敘述</th>
+					  <th>創作日期</th>
+					 </tr>
+					 <tr>
+					  <td>《不刪》-井朧</td>
+					  <td>
+					     <img src="assets/img/flower.jpg" alt="flower" />
+					  </td>
+					  <td>木棉花綻放，意味著夏天的到來，
+					  大概是又過了幾個夏天，你卻依然在我心中沒有離開，
+					  沒有刪除關於你的一切，就像夏天依然還是夏天一樣。</td>
+					  <td>2021.03.22</td>					  
+					 </tr>
+					 <tr>
+					  <td>《愛在夏天》-告五人</td>
+					  <td>
+					     <img src="assets/img/summer.jpg" alt="summer" />
+					  </td>
+					  <td>夏天的你與他去了哪裡？
+                          蒐集了哪些回憶並裝進了夏天？
+                          夏天的太陽熱辣滾燙，
+                          岸邊的浪潮激情翻滾，
+                          我與你與他和他的戀情，
+                          也在這個夏天熱情開放嗎？</td>
+					  <td>2021.04.12</td>					  
+					 </tr>
+					 <tr>
+					  <td>《我很好騙》-動力火車</td>
+					  <td>
+					     <img src="assets/img/love.jpg" alt="love" />
+					  </td>
+					  <td>我很好騙…我知道，
+                          只是...我已經寂寞到為愛盲目   
+                          你的愛是真是假，不重要了</td>
+					  <td>2021.04.22</td>					  
+					 </tr>
+					</table>
+				    <ul class="list-inline dev-icons">
+                        <li class="list-inline-item"><i class="fas fa-basketball-ball"></i></li>
+                        <li class="list-inline-item"><i class="fas fa-hiking"></i></li>
+                        <li class="list-inline-item"><i class="fas fa-swimmer"></i></li>
+						<li class="list-inline-item"><i class="fas fa-music"></i></li>
+                    </ul>
+				</div>				
+            </section>
             <!-- Interests-->
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
@@ -243,55 +291,6 @@
                     </ul>
 				</div>				
             </section>
-            <hr class="m-0" />
-            <!-- Awards-->
-            <section class="resume-section" id="awards">
-                <div class="resume-section-content">
-                    <h2 class="mb-5">Awards & Certifications</h2>
-                    <ul class="fa-ul mb-0">
-                        <li>
-                            <span class="fa-li"><i class="fas fa-medal"></i></span>
-                            Google Analytics Certified Developer
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-medal"></i></span>
-                            Mobile Web Specialist - Google Certification
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            1
-                            <sup>st</sup>
-                            Place - University of Colorado Boulder - Emerging Tech Competition 2009
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            1
-                            <sup>st</sup>
-                            Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            2
-                            <sup>nd</sup>
-                            Place - University of Colorado Boulder - Emerging Tech Competition 2008
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            1
-                            <sup>st</sup>
-                            Place - James Buchanan High School - Hackathon 2006
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            3
-                            <sup>rd</sup>
-                            Place - James Buchanan High School - Hackathon 2005
-                        </li>
-                    </ul>
-                </div>
-            </section>
-			
-			<hr class="m-0" />
             <!-- Interests-->
             <section class="resume-section" id="Friends">
                 <div class="resume-section-content">
