--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <link href="css/styles.css" rel="stylesheet" />
 		<link href="css/myresume.css" rel="stylesheet" />
 		<link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Caveat:wght@700&display=swap" rel="stylesheet">
     </head>
     <body id="page-top">
         <!-- Navigation-->
@@ -56,7 +56,7 @@
 直率敢言、富有正義感是我的個人特質，也在許多活動中培養了與人交流的能力。<br>
 將來的目標是進入國會成為一名國會議員為民服務，並以能幫助更多沒被社會看見的弱勢群眾為目標。<br>
 未來希望能藉此參與政策的制定，替人民發聲並希望能制定更完善的措施來造福更多人民，促進社會安定與和諧。<br>
-<p>I have a sense of justice so I  always stand up for those who face  injustice and do not know how to resolve it  in our society. For example, when I heard my friends or my classmates suffered from injustice by school, I will collect every evidence and cooperate with some teachers in order to increase my persuasiveness. Then, go to stand up for our right!  Accordingly, I want to become a lawyer to use wise means to come to their aid.</p>
+<p class="eng">I have a sense of justice so I  always stand up for those who face  injustice and do not know how to resolve it  in our society. For example, when I heard my friends or my classmates suffered from injustice by school, I will collect every evidence and cooperate with some teachers in order to increase my persuasiveness. Then, go to stand up for our right!  Accordingly, I want to become a lawyer to use wise means to come to their aid.</p>
 					<p class="lead mb-5">
                     <div class="social-icons">
                         <a class="social-icon" href="#"><i class="fab fa-linkedin-in"></i></a>
@@ -163,11 +163,11 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">專業科目領域</h3>
                             <p>
-							   <ul>
-							   <li>政治學<i class="fas fa-landmark"></i></li>
-							   <li>社會學<i class="far fa-handshake"></i> </li>
-							   <li>經濟學<i class="fas fa-hand-holding-usd"></i> </li>
-							   </ul>
+							  <ul>
+							    <li>政治學<i class="fas fa-landmark"></i></li>
+							    <li>社會學<i class="far fa-handshake"></i> </li>
+							    <li>經濟學<i class="fas fa-hand-holding-usd"></i> </li>
+							  </ul>
 							</p>		  
 							
                         </div>
@@ -250,7 +250,7 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p> am interesting in reading books about laws and political science including Six codes, Constitution, Civil Code, Code of  procedures, Criminal Code, Code of Criminal Procedure and Administrative laws, and so on.
+                    <p class="interest">I am interesting in reading books about laws and political science including Six codes, Constitution, Civil Code, Code of  procedures, Criminal Code, Code of Criminal Procedure and Administrative laws, and so on.
                     Besides this static activities, I love to play basketball and dance, also running is one of my favorite of sports.
 					And below is my favorite songs playlist want to share with you!</p>
 					<table class="table table-hover">
@@ -297,6 +297,7 @@
 				    <h2 class="mb-5">Friends</h2>
 					<ul class="fa-ul mb-0">
 					    <li><a href="http://chan031777.github.io/">詹亞軒</a></li>
+						<li><a href="http://shiba004.github.io/">施詠方</a></li>
 						<li><a href="http://baokakaaaaa.github.io/">陳毓婷</a></li>
 					</ul>
 				</div>
