--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
         <link href="css/styles.css" rel="stylesheet" />
 		<link href="css/myresume.css" rel="stylesheet" />
 		<link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300&display=swap" rel="stylesheet">
-    </head>
+<link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
     <body id="page-top">
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
@@ -46,7 +45,7 @@
                 <div class="resume-section-content">
                     <h1 class="mb-0">
                         許詠晴<br>
-                        <span class="text-primary">Hsu Yung Qing</span>
+                        <span class="engname">Hsu Yung Qing</span>
                     </h1>
                     <div class="subheading mb-5">
                         新北市深坑區深南路21號 · (03) 123-8468 ·
@@ -113,6 +112,34 @@
             <section class="resume-section" id="education">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Education</h2>
+					<div class="d-flex flex-column flex-md-row justify-content-between">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">世新大學 Shih Hsin University</h3>
+                            <div class="subheading mb-3">資訊傳播系Department of Information and Communications</div>
+                            <p>
+							 <ul>							   
+							   <li>班級排名：7/61</li>
+							   <li>組排名：7/61</li> 
+							   <li>操行成績：甲</li> 							    
+							   </ul>
+							</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">August 2018 - March 2020</span></div>
+                    </div>
+					<div class="d-flex flex-column flex-md-row justify-content-between">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">東吳大學 Soochow University</h3>
+                            <div class="subheading mb-3">政治系Department of Political Science</div>
+                            <p class="scu">							   
+							  <ul>							   
+							   <li>班級排名：9/54</li>
+							   <li>總平均成績：85.52</li>
+							   <li>操行成績：85 </li>
+							  </ul> 
+							</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">August 2018 - March 2020</span></div>
+                    </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">桃園市立壽山高級中等學校 Taoyuan Municipal Shou Shan Senior High School</h3>
@@ -127,30 +154,6 @@
 							</p>						
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">August 2015 - June 2018</span></div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">東吳大學 Soochow University</h3>
-                            <div class="subheading mb-3">政治系Department of Political Science</div>
-                            <p class="scu">							   
-							  GPA: 3.56							     							  
-							</p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2018 - March 2020</span></div>
-                    </div>
-					<div class="d-flex flex-column flex-md-row justify-content-between">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">世新大學 Shih Hsin University</h3>
-                            <div class="subheading mb-3">資訊傳播系Department of Information and Communications</div>
-                            <p>
-							 <ul>							   
-							   <li>班級排名：7/61</li>
-							   <li>組排名：7/61</li> 
-							   <li>操行成績：甲</li> 							    
-							   </ul>
-							</p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2018 - March 2020</span></div>
                     </div>
                 </div>
             </section>
@@ -250,7 +253,7 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p> am interesting in reading books about laws and political science including Six codes, Constitution, Civil Code, Code of  procedures, Criminal Code, Code of Criminal Procedure and Administrative laws, and so on.
+                    <p>I am interesting in reading books about laws and political science including Six codes, Constitution, Civil Code, Code of  procedures, Criminal Code, Code of Criminal Procedure and Administrative laws, and so on.
                     Besides this static activities, I love to play basketball and dance, also running is one of my favorite of sports.
 					And below is my favorite songs playlist want to share with you!</p>
 					<table class="table table-hover">
@@ -298,6 +301,7 @@
 					<ul class="fa-ul mb-0">
 					    <li><a href="http://chan031777.github.io/">詹亞軒</a></li>
 						<li><a href="http://baokakaaaaa.github.io/">陳毓婷</a></li>
+						<li><a href="http://shiba004.github.io/">施詠方</a></li>
 					</ul>
 				</div>
 			</section>
